[package]
name = "school-management-api"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "migration", "entity", "service"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }


[dependencies]
service = { path = "./service" }
entity = { path = "./entity" }
migration = { path = "./migration" }

actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
dotenv = "0.15.0"
url = "2.5.0"
jsonwebtoken = "9"
env_logger = "0.10.1"
