[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.4" # sea-orm version
features = [
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
