[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4"] }


[dependencies.sea-orm]
version = "0.12.4" # sea-orm version
features = [
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
]
